Add java.xml.bind module for odin-server Disable spring boot devtools since they do not support java 9 yet